--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 		<div id="pressed" class="keys"></div>
 		<div class="specialKey enter keys"></div>
 		<div class="specialKey backspace keys"></div>
-		<div id="multiple" class="keys"></div>
+		<div id="multiple" class="keys">
+			<div class="container"></div>
+			<div class="progressContainer"><div></div></div>
+		</div>
 	</body>
 </html>
