--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
 			<div class="container"></div>
 			<div class="progressContainer"><div></div></div>
 		</div>
+		<div id="shift">shift</div>
 	</body>
 </html>
